# store-rest-api

./: app.py  pyproject.toml  schemas.py
resources/: item.py  store.py
